initial version of admin API (short links)
